# lifx-rs

./: Cargo.toml
demo/: Cargo.toml
demo/src/: main.rs
lifx-client/: Cargo.toml
lifx-client/src/: any_message.rs  client.rs  codec.rs  connection.rs  error.rs  lib.rs  transport.rs
lifx-proto/: Cargo.toml
lifx-proto/src/: color.rs  device.rs  header.rs  label.rs  lib.rs  message.rs  wire.rs
