[package]
name = "demo"
version = "0.1.0"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
lifx-client = { path = "../lifx-client" }
lifx-proto = { path = "../lifx-proto", features = ["palette"] }
palette = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2"