[package]
name = "lifx-proto"
version = "0.1.0"
authors = ["Ben Navetta <ben.navetta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field = "0.10"
bytes = "1.0"
macaddr = "1.0"
palette = { version = "0.5", optional = true }
thiserror = "1.0"
